Hom-8 feat AddHorseHandler feat Horses model add route add-horse in router and swagger
