# back-end-go/docs/swagger.yaml
@@ -14,6 +14,25 @@ definitions:
     - email
     - password
     type: object
+  model.Horses:
+    properties:
+      age:
+        type: integer
+      createdAt:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      race:
+        type: string
+      updatedAt:
+        type: string
+    required:
+    - age
+    - name
+    - race
+    type: object
   model.User:
     properties:
       createdAt:
@@ -112,6 +131,46 @@ paths:
       summary: Register a new user
       tags:
       - Credential
+  /api/v1/horses/add-horse:
+    post:
+      consumes:
+      - application/json
+      description: add a profil user
+      parameters:
+      - description: Name, Age and Race
+        in: body
+        name: addhorse
+        required: true
+        schema:
+          $ref: '#/definitions/model.Horses'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Horse created
+          schema:
+            $ref: '#/definitions/model.Horses'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: add a horse
+      tags:
+      - Horses
   /ping:
     get:
       description: Respond with "pong"
